# client

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt
.github/workflows/: testing.yml
examples/: create_table.py
hyperleda/: __init__.py  client.py  common.py  config.py  error.py  model.py  utils.py
hyperleda/data/: __init__.py  client.py  model.py
src/: client.py  model.py
tests/: utils_test.py
