[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperleda"
description = "Hyperleda web-service client"
readme = "README.md"
license = { file = "LICENSE" }
version = "0.1.0"
requires-python = ">=3.10"
authors = [{ name = "HyperLeda Team" }]
keywords = ["hyperleda", "astronomy", "extragalactic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "pandas ~= 2.2.2",
    "requests ~= 2.31.0",
]


[project.urls]
"Homepage" = "https://github.com/HyperLEDA/client"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint]
ignore = [
    "N818", # ignore SomeException -> SomeError rule
    "B024", # abstract class without abstract methods
    "B017", # ignore assertRaises(Exception)
]
# see https://docs.astral.sh/ruff/rules/ for description of each rule set.
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "YTT",
    "B",
    "A",
    "C4",
    "DTZ",
    "PIE",
    "RET",
    "SLF",
    "PTH",
    "PLE",
    "FLY",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F403", # ignore star imports warning in __init__ files
]
